--- a/PTrampert.IniUtils/PTrampert.IniUtils.csproj
+++ b/PTrampert.IniUtils/PTrampert.IniUtils.csproj
@@ -9,12 +9,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Antlr4.Runtime.Standard" Version="4.13.1" />
-      <PackageReference Include="Antlr4BuildTasks" Version="12.14.0" PrivateAssets="all" IncludeAssets="build" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.2" />
-    </ItemGroup>
-    
-    <ItemGroup>
-        <Antlr4 Include="**/*.g4" />
+      <ProjectReference Include="..\PTrampert.IniUtils.Grammar\PTrampert.IniUtils.Grammar.csproj" />
     </ItemGroup>
 </Project>
